--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 dist: xenial
+language: c
+
 addons:
   apt:
     packages:
@@ -37,7 +39,7 @@ env:
 
 before_install:
     - echo $TREE_DIR
-    - curl https://storage.googleapis.com/git-repo-downloads/repo > /bin/repo && chmod a+x /bin/repo
+    - sudo bash -c "curl https://storage.googleapis.com/git-repo-downloads/repo > /bin/repo && chmod a+x /bin/repo"
     - mkdir /build && cd /build
     - repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
     - repo sync
