--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ env:
 before_install:
     - echo $TREE_DIR
     - sudo bash -c "curl https://storage.googleapis.com/git-repo-downloads/repo > /bin/repo && chmod a+x /bin/repo"
-    - mkdir /build && cd /build
+    - sudo bash -c "mkdir /build && chown -R $whoami:$whoami /build && cd /build"
     - repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
     - repo sync
     - rm -rf .repo && find . -type d -name ".git" -execdir rm -rf {} \;
