--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ addons:
     - unzip
     - maven
     - schedtool
+    - tree
 
 cache: ccache
 
@@ -47,7 +48,7 @@ before_install:
     - cp -r $TRAVIS_BUILD_DIR device/xiaomi/lavender
 
 script:
-    - tree prebuilts/clang
+    - tree prebuilts/clang/host/linux-x86/clang-4691093/
     - source build/envsetup.sh && lunch omni_lavender-eng && mka recoveryimage
 
 before_deploy:
