--- a/.travis.yml
+++ b/.travis.yml
@@ -42,15 +42,13 @@ before_install:
     - git config --global color.ui false
     - sudo bash -c "curl https://storage.googleapis.com/git-repo-downloads/repo > /bin/repo && chmod a+x /bin/repo"
     - mkdir -p $HOME/sources && cd $HOME/sources
-    - repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
-    - travis_wait 20 repo sync
+    - repo init --depth=1 -q -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
+    - repo sync
     - mkdir -p device/xiaomi
     - cp -r $TRAVIS_BUILD_DIR device/xiaomi/lavender
 
 script:
-    - source build/envsetup.sh 
-    - lunch omni_lavender-eng
-    - mka recoveryimage
+    - ./device/xiaomi/lavender/travis-build.sh
 
 before_deploy:
     - export FILE_TO_UPLOAD=$HOME/sources/out/target/product/lavender/recovery.img
