--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
     - sudo bash -c "curl https://storage.googleapis.com/git-repo-downloads/repo > /bin/repo && chmod a+x /bin/repo"
     - mkdir -p $HOME/sources && cd $HOME/sources
     - repo init --depth=1 -q -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
-    - repo sync
+    - travis_wait 20 repo sync
     - mkdir -p device/xiaomi
     - cp -r $TRAVIS_BUILD_DIR device/xiaomi/lavender
 
@@ -58,4 +58,5 @@ deploy:
     api_key: $OAUTH_KEY
     file: $FILE_TO_UPLOAD
     skip_cleanup: true
-    draft: true
+    on:
+        tags: false
