--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 dist: xenial
-language: cpp
+language: minimal
 
 addons:
   apt:
@@ -30,7 +30,9 @@ addons:
     - maven
     - schedtool
 
-cache: ccache
+cache:
+  directories:
+  - $HOME/.ccache
 
 env:
     global:
