Changed on.tags to true and removed on.all_branches parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,5 +61,4 @@ deploy:
     file: $FILE_TO_UPLOAD
     skip_cleanup: true
     on:
-        tags: false
-        all_branches: true
+        tags: true
